objects/Milestone1_Expense__c.object
<CustomObject>
    <description>This object is a replica of the Old Expense object(Miilestone1 Unmanaged package)</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Incurred__c</fullName>
        <label>Date Incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incurred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incurred_By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Expenses_Incurred2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <label>Project Task</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipLabel>Old Expenses</relationshipLabel>
        <relationshipName>Project_Expenses2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Old Expense</label>
    <nameField>
        <displayFormat>PEXP-{0000}</displayFormat>
        <label>Project Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Old Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>